# ida-pro-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  README_zh.md  ida-plugin.json  pyproject.toml
.github/workflows/: coverage-comment.yml  idalib-tests.yml
devdocs/: headless-web-architecture.md
src/ida_pro_mcp/: headless_project_store.py  headless_web.py  ida_mcp.py  ida_tools_cache.json  idalib_pool_manager.py  idalib_pool_server.py  idalib_server.py  idalib_session_manager.py  installer.py  installer_tui.py  server.py  session_mcp_server.py  test.py  test_sse_transport.py
src/ida_pro_mcp/ida_mcp/: __init__.py  api_analysis.py  api_composite.py  api_core.py  api_debug.py  api_discovery.py  api_memory.py  api_modify.py  api_python.py  api_resources.py  api_stack.py  api_survey.py  api_types.py  compat.py  discovery.py  framework.py  http.py  rpc.py  sync.py  utils.py
src/ida_pro_mcp/ida_mcp/tests/: __init__.py  test_api_analysis.py  test_api_composite.py  test_api_core.py  test_api_discovery.py  test_api_memory.py  test_api_modify.py  test_api_python.py  test_api_resources.py  test_api_stack.py  test_api_survey.py  test_api_types.py  test_discovery.py  test_framework_helpers.py  test_http.py  test_idalib_server.py  test_installer.py  test_server.py  test_typed_fixture.py  test_utils.py
src/ida_pro_mcp/ida_mcp/zeromcp/: jsonrpc.py  mcp.py
src/ida_pro_mcp/web/static/: workspace.css  workspace.js
src/ida_pro_mcp/web/templates/: workspace.html
tests/: conftest.py  test_headless_web_ui.py  test_idalib_pool_windows_transport.py  test_mcp_http_sse_regressions.py  test_multi_agent.py  test_server_transport.py  test_session_shutdown.py
